# RAP

./: README.md
rap/: main.py  test.py
rap/connect/: client.py  estun_ctrl.py  parse.py  serve.py
rap/connect/cpp_test/serve_cpp/build-serve_socket-Desktop_Qt_5_14_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  serve_socket  serve_socket.cbp
rap/connect/cpp_test/serve_cpp/build-serve_socket-Desktop_Qt_5_14_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-dea0280b6ad0a6e5008b.json  (+12 more)
rap/connect/cpp_test/serve_cpp/serve_socket/: CMakeLists.txt  main.cpp
rap/connect/cpp_test/serve_cpp/serve_socket/include/: platform.h
rap/connect/cpp_test/serve_cpp/serve_socket/src/: platform.cpp
rap/data/: para.json  test.py
rap/data/calibrate/: ft.npy
rap/realsense/: align-depth2color.py  color_image.npy  depth_image.npy  get_pcd.py  intri_para.npy  multi_cam.py  show.py
rap/ui/: MainWidget.py  MainWindow.py  TD3.py  UI.py  calibrate_widget.py  connet_widget.py  ft_traj.npy  para_set.py  plot2d.py  plot3d.py  recoder.py  setting.py  state.py  test.py
rap/ui/base/: cam_example.py  vedio.py
rap/ui/menu/data_coleect/: diffusion_peg_in_hole.py
rap/ui/menu/data_collect/: 123  FixHolePolicy.py  auto_sample.py  check_data_saved.py  diffusion_peg_in_hole.py  peg_in_hole_control.py  peg_in_hole_rl.py
rap/ui/results/: plot.py
rap/ui/ui3d/: arcball.py  axis.py  axis1.py  forcesensor.py
rap/utils/: adapt_force.py  force_adapter.py  ft_ident.py  json_para.py  realsense.py  trans.py  urdf.py  zarr_io.py
